# elisym-core

./: .gitignore  Cargo.toml  LICENSE  PROTOCOL.md  README.md
.github/workflows/: ci.yml  release.yml
examples/: customer.rs  demo_customer.rs  demo_provider.rs  demo_setup.rs  full_demo.rs  messaging.rs  open_channel.rs  payment_flow.rs  provider.rs  wallet_info.rs  withdraw.rs
examples/lightning/: demo_customer.rs
examples/solana/: demo_customer.rs
src/: dedup.rs  discovery.rs  error.rs  identity.rs  lib.rs  marketplace.rs  messaging.rs  payments.rs  types.rs
src/payment/: ldk.rs  mod.rs  solana.rs
tests/: integration_tests.rs
